force-app/main/default/objects/User/fields/AdministrativeComment__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeComment__c</fullName>
    <label>Administrative comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>