force-app/main/default/objects/User/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores if the user is a Customer Succes Manager</description>
    <label>CSM?</label>
    <type>Checkbox</type>
</CustomField>