force-app/main/default/objects/User/fields/DefaultSideConversationEmail__c.field-meta.xml
<CustomField>
    <fullName>DefaultSideConversationEmail__c</fullName>
    <description>This field can be edited by a user to change his default email address used in Side Conversations. Side Conversations are email threads with third parties on a customer&apos;s Case.</description>
    <label>Default Side Conversation Email</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatingCompany__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DefaultCaseEmails</valueSetName>
    </valueSet>
</CustomField>