force-app/main/default/objects/User/fields/EmailSignature__c.field-meta.xml
<CustomField>
    <fullName>EmailSignature__c</fullName>
    <label>Email Signature</label>
    <type>TextArea</type>
</CustomField>