force-app/main/default/objects/User/fields/MarketGroup__c.field-meta.xml
<CustomField>
    <fullName>MarketGroup__c</fullName>
    <label>Market Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>