force-app/main/default/objects/User/fields/MessagingName__c.field-meta.xml
<CustomField>
    <fullName>MessagingName__c</fullName>
    <label>Messaging Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>