force-app/main/default/objects/User/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <description>(R1-S1 by JD): Operating Company.</description>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liber</fullName>
            </value>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
            <value>
                <fullName>Plantyn</fullName>
            </value>
            <value>
                <fullName>Global Admin</fullName>
            </value>
            <value>
                <fullName>Noordhoff Professional</fullName>
            </value>
            <value>
                <fullName>Noordhoff Zorg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>