force-app/main/default/objects/User/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <defaultValue>&apos;Other&apos;</defaultValue>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Non-Health</fullName>
            </value>
            <value>
                <fullName>VE/HE (MBO/HBO)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>