force-app/main/default/objects/User/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Segment to be used on the Lead to determine opportunity record type to convert the lead to.</description>
    <formula>IF(ISPICKVAL(OperatingCompany__c,&quot;Plantyn&quot;),&quot;Plantyn&quot;,
IF(AND(ISPICKVAL(OperatingCompany__c,&quot;Liber&quot;),CONTAINS(UserRole.DeveloperName,&quot;University&quot;)),&quot;Liber University&quot;,
IF(AND(ISPICKVAL(OperatingCompany__c,&quot;Liber&quot;),CONTAINS(UserRole.DeveloperName,&quot;School&quot;)),&quot;Liber School&quot;,
IF(ISPICKVAL(OperatingCompany__c,&quot;Liber&quot;),&quot;Liber&quot;,
IF(CONTAINS(UserRole.DeveloperName,&quot;_BAO&quot;),&quot;Noordhoff PE&quot;,
IF(CONTAINS(UserRole.DeveloperName,&quot;_HO_VE&quot;),&quot;Noordhoff HE&quot;,
IF(CONTAINS(UserRole.DeveloperName,&quot;_MBO&quot;),&quot;Noordhoff VE&quot;,
IF(CONTAINS(UserRole.DeveloperName,&quot;_VO&quot;),&quot;Noordhoff SE&quot;,
IF(CONTAINS(UserRole.DeveloperName,&quot;_Zorg&quot;),&quot;Noordhoff Zorg&quot;,
IF(ISPICKVAL(OperatingCompany__c,&quot;Noordhoff&quot;),&quot;Noordhoff&quot;,&quot;&quot;))))))))))</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>