force-app/main/default/objects/User/fields/ServiceOrSales__c.field-meta.xml
<CustomField>
    <fullName>ServiceOrSales__c</fullName>
    <label>Service Or Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrService</valueSetName>
    </valueSet>
</CustomField>