force-app/main/default/objects/User/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperatingCompany</valueSetName>
    </valueSet>
</CustomField>