force-app/main/default/objects/User/fields/ValidationRulesDoNotApply__c.field-meta.xml
<CustomField>
    <fullName>ValidationRulesDoNotApply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use - NOT($User.Validation_Rules_DO_NOT_Apply__c) - in your Validation Rule so it won&apos;t run/apply when creating or editing a record on an object.</description>
    <inlineHelpText>When checked, Validation Rules that are set on objects do not run/apply.</inlineHelpText>
    <label>Validation Rules DO NOT Apply</label>
    <type>Checkbox</type>
</CustomField>