force-app/main/default/objects/User/validationRules/FederationIdentifier.validationRule-meta.xml
<ValidationRule>
    <fullName>FederationIdentifier</fullName>
    <active>true</active>
    <description>FederationId is a required field for SSO</description>
    <errorConditionFormula>ISBLANK( FederationIdentifier )</errorConditionFormula>
    <errorMessage>FederationId is a required field for SSO</errorMessage>
</ValidationRule>